--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                            <p>
                               Hi, I am a Computer Science student, currently pursuing my Bachelor's degree from College Of Engineering Roorkee. I like to implement the concepts which I learn, I personally feel that it helps me to grasp the concept better.  
                            </p>
-                           <p> <a href="CV.pdf" target="_blank">My Resume Is Here!!</a></p>
+                           <p> <a href="CV.pdf" class="link" target="_blank"><b>My Resume Is Here!!</b></a></p>
                         </div>
                      </div>
                      <div class="col-lg-6 col-md-12">
@@ -129,6 +129,7 @@
          <div class="section" id="experience">
             <div class="container cc-experience">
                <div class="h4 text-center mb-4 title">Experience</div>
+               <!--
                <div class="card">
                   <div class="row">
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -147,6 +148,7 @@
                      </div>
                   </div>
                </div>
+           -->
                <div class="card">
                   <div class="row">
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
@@ -198,8 +200,11 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Remote Desk &nbsp; &nbsp; <a href="https://github.com/peeyush1999/RemoteDesk"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
+                           <div class="h5">Remote Desk </div>
                            <p>Developed a remote screen sharing application using Socket Programming with limited remote control functionality.</p>
+                           
+                           <a href="https://github.com/peeyush1999/RemoteDesk"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -216,8 +221,11 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Fast Download Manager &nbsp; &nbsp; <a href="https://github.com/peeyush1999/FastDM"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
+                           <div class="h5">Fast Download Manager </div>
                            <p>Developed a Multi-Threaded Download manager with Resume support and segmented download feature.</p>
+                           <a href="https://github.com/peeyush1999/FastDM"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a>
+                           &nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -234,8 +242,11 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Experience Virtual Table Tennis using OpenCV and Python &nbsp; &nbsp; <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/Table%20tennis.py"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
+                           <div class="h5">Experience Virtual Table Tennis using OpenCV and Python </div>
                            <p>Developed a gesture based approch to play Table Tennis</p>
+                           <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/Table%20tennis.py"><i class="fa devicon-github-plain fa-2x" aria-hidden="true"></i></a>
+                           &nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="https://youtu.be/3Xmfvm17NEI"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -247,13 +258,16 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>July 2020</p>
-                           <div class="h5">Invisibility Cloak &nbsp; &nbsp; <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/harry.py"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
+                           <div class="h5">Invisibility Cloak </div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
                            <div class="h5">Harry Potters Invisible cloak Using Image Processing</div>
                            <p>Developed a Image Processing based Invisible Cloak in Python</p>
+                           <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/harry.py"><i class="fa devicon-github-plain fa-2x" aria-hidden="true"></i></a>
+                           &nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="https://youtu.be/q9iTtflzAzo"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -265,13 +279,16 @@
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
                            <p>July 2020</p>
-                           <div class="h5">Duck-Hunt Game &nbsp; &nbsp; <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/DUCKKHUNT.py"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a></div>
+                           <div class="h5">Duck-Hunt Game</div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
                            <div class="h5">Duck Hunt Game Using Image Processing</div>
                            <p>Developed a Image Processing based Duck Hunt Game in Python</p>
+                           <a href="https://github.com/peeyush1999/ImageProcessingProject/blob/main/DUCKKHUNT.py"><i class="fa devicon-github-plain fa-2x" aria-hidden="true"></i></a>
+                           &nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="https://youtu.be/XSnyc4L2DSM"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -287,8 +304,13 @@
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
-                           <div class="h5">Travis : Your Personnel Travel Guide &nbsp; &nbsp;  <a href="https://www.amazon.in/SahuTronics-Travis/dp/B0899KDMF2"><i class="fa devicon-amazon-plain fa-2x " aria-hidden="true"></i></a></div>
-                           <p>Developed an intelligent Python based chatbot specifically for Tourism domain. It is hosted on Amazon Alexa Skill Store. <br><a href="https://www.amazon.in/SahuTronics-Travis/dp/B0899KDMF2/ref=sr_1_1?dchild=1&keywords=travis&qid=1596617757&s=digital-skills&sr=1-1"> Link </a>  </p>
+                           <div class="h5">Travis : Your Personnel Travel Guide </div>
+                           <p>Developed an intelligent Python based chatbot specifically for Tourism domain. It is hosted on Amazon Alexa Skill Store.</p>
+                           	<a href="https://www.amazon.in/SahuTronics-Travis/dp/B0899KDMF2"><i class="fa fa-amazon fa-2x " aria-hidden="true"></i></a>
+                           	&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
+
+                           	
                         </div>
                      </div>
                   </div>
@@ -304,7 +326,11 @@
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
                            <div class="h5">Train Enquiry &nbsp; &nbsp;  <a href="https://www.amazon.in/SahuTronics-Train-Uncle/dp/B084JJR4HZ/ref=sr_1_1?dchild=1&keywords=train+uncle&qid=1617006686&s=digital-skills&sr=1-1"><i class="fa devicon-amazon-plain fa-2x " aria-hidden="true"></i></a></div>
-                           <p>An Amazon Alexa Skill, with the help of this skill user can enquire about the live running status of his train by using voice only.<br><a href="https://www.amazon.in/SahuTronics-Train-Uncle/dp/B084JJR4HZ/ref=sr_1_1?dchild=1&keywords=train+uncle&qid=1596695643&s=digital-skills&sr=1-1"> Link </a></p>
+                           <p>An Amazon Alexa Skill, with the help of this skill user can enquire about the live running status of his train by using voice only.</p>
+
+                           <a href="https://www.amazon.in/SahuTronics-Train-Uncle/dp/B084JJR4HZ/ref=sr_1_1?dchild=1&keywords=train+uncle&qid=1596695643&s=digital-skills&sr=1-1"><i class="fa fa-amazon fa-2x " aria-hidden="true"></i></a>
+                           	&nbsp;&nbsp;&nbsp;&nbsp;
+                           <a href="#"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
@@ -314,14 +340,14 @@
                   <div class="row">
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
-                           <p>March 2019</p>
+                           <p>March 2020</p>
                            <div class="h5">Home Automation<br>(Android App)</div>
                         </div>
                      </div>
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
                            <div class="h5">Sahutronics Home Automtion Android App</div>
-                           <p>This app can control your devices using Bluetooth Connection. This app is currently in developing Stage, more features like set time to turn ON/OFF devices, Connecting App with Internet to control device from anywhere in world, and many more......</p>
+                           <p>This app can control your devices using Internet and Bluetooth Connection. This app is currently in developing Stage, more features like set time to turn ON/OFF devices, change names of device and many more... yet to be added</p>
                         </div>
                      </div>
                   </div>
@@ -338,7 +364,8 @@
                      <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body">
                            <div class="h5">Sahutronics Home Automtion Device</div>
-                           <p>This is capable of controlling your home’s AC appliances.By this device you can control four devices at a time. This Device is Alexa Enabled, means you can control your device with voice.</p>
+                           <p>This is capable of controlling your home’s AC appliances.By this device you can control four devices at a time. This Device is Alexa Enabled, means you can control your device with voice too.</p>
+                           <a href="#"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
