--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                            <p>
                               Hi, I am a Computer Science student, currently pursuing my Bachelor's degree from College Of Engineering Roorkee. I like to implement the concepts which I learn, I personally feel that it helps me to grasp the concept better.  
                            </p>
-                           <p> <a href="CV.pdf" class="link" target="_blank"><b>My Resume Is Here!!</b></a></p>
+                           My Resume Is Here!! &nbsp; 
+                          <a  href="CV.pdf" target="_blank" title="ScoreCard"><i class="fa fa-file-pdf-o fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                      <div class="col-lg-6 col-md-12">
@@ -144,6 +145,7 @@
                            <p>
                                AIR 447 in Graduate Aptitude Test in Engineering (CSE) with GATE Score 742.
                            </p>
+                           <a  href="images/gatesc.pdf" target="_blank" title="ScoreCard"><i class="fa fa-file-pdf-o fa-2x youtube" aria-hidden="true"></i></a>
                         </div>
                      </div>
                   </div>
