--- a/index.html
+++ b/index.html
@@ -440,9 +440,9 @@
                         <div class="card-body">
                            <div class="h5">Website Development Competition's </div>
                            <p>
-                              Made websites for various web-development competition's held in our college.<br>
+                              Made websites for various web-development competition's held at our college.<br>
                               For Hire Uncle: Domestic Help Portal and Food Uncle: Food ordering Portal, got First prize.<br>
-                              For Examp Uncle: Online Examination Portal, got Second Prize.</p>
+                              For Exam Uncle: Online Examination Portal, got Second Prize.</p>
                               <a  href="images/web1.jpg" target="_blank" title="Certificate"><i class="fa fa-picture-o fa-2x youtube" aria-hidden="true"></i></a>
                               &nbsp; &nbsp; &nbsp; &nbsp;
                               <a  href="images/web2.jpg" target="_blank" title="Certificate"><i class="fa fa-picture-o fa-2x youtube" aria-hidden="true"></i></a>
