--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
                      <i class="devicon-cplusplus-plain" style="font-size: 5em;"></i>
                      <i class="devicon-python-plain-wordmark" style="font-size: 5em;"></i>
                      <i class="devicon-mysql-plain-wordmark" style="font-size: 5em;"></i>
-                     <i class="devicon-html5-plain-wordmark" style="font-size: 5em;"></i>
+                     <!--<i class="devicon-html5-plain-wordmark" style="font-size: 5em;"></i>-->
                      <i class="devicon-javascript-plain" style="font-size: 5em;"></i>
                      <i class="devicon-php-plain " style="font-size: 5em;"></i>
                      <i class="devicon-linux-plain" style="font-size: 5em;"></i>
