--- a/index.html
+++ b/index.html
@@ -54,7 +54,8 @@
                   <div class="container">
                      <div class="button-container">
                         <a class="btn btn-default btn-round btn-lg btn-icon " href="#"><i class="fa devicon-facebook-plain fa-2x " aria-hidden="true"></i></a>	
-                        <a class="btn btn-default btn-round btn-lg btn-icon " href="#"><i class="fa devicon-twitter-plain fa-2x " aria-hidden="true"></i></a>	
+                        
+			<a class="btn btn-default btn-round btn-lg btn-icon " href="https://www.youtube.com/channel/UCIFZAjhUt1Z_NQtAv1myjZg"><i class="fa fa-picture-o fa-2x youtube" aria-hidden="true"></i></a>
                         <a class="btn btn-default btn-round btn-lg btn-icon " href="#"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a>	
                      </div>
                   </div>
