--- a/index.html
+++ b/index.html
@@ -568,7 +568,7 @@
                                  </a>
                               </div>
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                                 <a href="examuncle.html">
+                                 <!--<a href="examuncle.html">-->
                                     <figure class="cc-effect">
                                        <img src="images/ExamUncle.PNG" alt="Image"  />
                                        <figcaption>
@@ -576,12 +576,12 @@
                                           <p>Web Development</p>
                                        </figcaption>
                                     </figure>
-                                 </a>
+                                 <!--</a>-->
                               </div>
                            </div>
                            <div class="col-md-6">
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                                 <a href="fooduncle.html">
+                                <!-- <a href="fooduncle.html">-->
                                     <figure class="cc-effect">
                                        <img src="images/Food Uncle.PNG" alt="Image"/>
                                        <figcaption>
@@ -589,10 +589,10 @@
                                           <p>Web Development</p>
                                        </figcaption>
                                     </figure>
-                                 </a>
+                                 <!--</a>-->
                               </div>
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                                 <a href="hireuncle.html">
+                                <1-- <a href="hireuncle.html">-->
                                     <figure class="cc-effect">
                                        <img src="images/Hire uncle.PNG" alt="Image"/>
                                        <figcaption>
@@ -600,7 +600,7 @@
                                           <p>Web Development</p>
                                        </figcaption>
                                     </figure>
-                                 </a>
+                                 <!--</a>-->
                               </div>
                            </div>
                         </div>
