--- a/index.html
+++ b/index.html
@@ -592,7 +592,7 @@
                                  <!--</a>-->
                               </div>
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                                <1-- <a href="hireuncle.html">-->
+                                <!-- <a href="hireuncle.html">-->
                                     <figure class="cc-effect">
                                        <img src="images/Hire uncle.PNG" alt="Image"/>
                                        <figcaption>
