--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       
    </head>
    <body id="top">
+	<base target="_blank">
       <header>
          <div class="profile-page sidebar-collapse">
             <nav class="navbar navbar-expand-lg fixed-top navbar-transparent bg-primary" color-on-scroll="400">
