--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
                            
                            <a href="https://github.com/peeyush1999/RemoteDesk" title="GitHub"><i class="fa devicon-github-plain fa-2x " aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
                            <!--<a href="#" title="YouTube"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>-->
-                           <a id='6' href="#" onclick="hideandshow(this.id)"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
+                           <a id='6' onclick="hideandshow(this.id)"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>
                            <iframe width="420" height="315" id="frame6" style="margin:auto;width:50%; display:none;"
 							src="https://www.youtube.com/embed/kD8ODx0kR_s">
 							</iframe>
