--- a/index.html
+++ b/index.html
@@ -615,8 +615,8 @@
                                     <figure class="cc-effect">
                                        <img src="images/SahutronicsLogo.PNG" alt="Image"/>
                                        <figcaption>
-                                          <div class="h4">Website Development 2018 Winner</div>
-                                          <p>Web Development</p>
+                                          <div class="h4">Sahutronics</div>
+                                          <p>Invent - Inspire - Innovate</p>
                                        </figcaption>
                                     </figure>
                                  </a>
