--- a/index.html
+++ b/index.html
@@ -611,7 +611,7 @@
                                  </a>
                               </div>
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
-                                 <a href="sahutronics.snaked.site">
+                                 <a href="https://sahutronics.snaked.site/">
                                     <figure class="cc-effect">
                                        <img src="images/SahutronicsLogo.png" alt="Image"/>
                                        <figcaption>
