--- a/index.html
+++ b/index.html
@@ -613,7 +613,7 @@
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                  <a href="https://sahutronics.snaked.site/">
                                     <figure class="cc-effect">
-                                       <img src="images/SahutronicsLogo.png" alt="Image"/>
+                                       <img src="images/SahutronicsLogo.png" alt="Image" height="250"/>
                                        <figcaption>
                                           <div class="h4">Sahutronics</div>
                                           <p>Invent - Inspire - Innovate</p>
