--- a/index.html
+++ b/index.html
@@ -243,6 +243,27 @@
                   <div class="row">
                      <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
                         <div class="card-body cc-experience-header">
+                           <p>May 2021</p>
+                           <div class="h5">Sahutronics</div>
+                        </div>
+                     </div>
+                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                           <div class="h5">Sahutronics Website</div>
+                           <p>Google <b>OAuth 2.0</b> sign-on based website, capable of real-time controlling sahutronics home automation devices using MQTT Secure Web Socket. </p>
+                           
+                           <a href="https://sahutronics.snaked.site/" title="Sahutronics"><i class="fa fa-link fa-2x " aria-hidden="true"></i></a>&nbsp;&nbsp;&nbsp;&nbsp;
+                           <!--<a href="#" title="YouTube"><i class="fa fa-youtube-play fa-2x youtube" aria-hidden="true"></i></a>-->
+                                                   </div>
+                     </div>
+                  </div>
+               </div>
+               <!-- Card End---------------------->
+               <!-- Card Started------------------>
+               <div class="card">
+                  <div class="row">
+                     <div class="col-md-3 bg-primary" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-experience-header">
                            <p>Feb 2021</p>
                            <div class="h5">Remote Desk   </div>
                         </div>
@@ -613,7 +634,7 @@
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                  <a href="https://sahutronics.snaked.site/">
                                     <figure class="cc-effect">
-                                       <img src="images/SahutronicsLogo.png" alt="Image" height="250"/>
+                                       <img src="images/SahutronicsLogo.png" style="margin:auto;" alt="Image" height="265"/>
                                        <figcaption>
                                           <div class="h4">Sahutronics</div>
                                           <p>Invent - Inspire - Innovate</p>
