Updated Sahutronics site

--- a/index.html
+++ b/index.html
@@ -599,11 +599,13 @@
                               <div class="cc-porfolio-image img-raised" data-aos="fade-up" data-aos-anchor-placement="top-bottom">
                                  <a href="#web-development">
                                     <figure class="cc-effect">
-                                       <center><img src="images/sahutronics.png" alt="Image" height='268'/></center>
+                                       <center><img src="images/website.PNG" alt="Image" /></center>
+                                       <a href="https://sahutronics.snaked.site/">
                                        <figcaption>
                                           <div class="h4">Sahutronics</div>
                                           <p>Invent-Inspire-Innovate</p>
                                        </figcaption>
+                                       </a>
                                     </figure>
                                  </a>
                               </div>
