updated masters info

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                      <h1 class="responsive-headline" style=" font-weight: bold;" >Hey, I'm  <span class="txt-rotate" style="color: #FFA65D; font-weight: bold;" data-period="
                         2000" data-rotate='[ "Peeyush Sahu."]'></span></h1>
                      <h3>
-                     <span>Bachelors's Student</span><br> <span>College Of Engineering Roorkee</span> <br>
+                     <span>Masters's Student</span><br> <span>International Institute Of Information Technology Hyderabad</span> <br>
                   </div>
                </div>
                <div class="section">
@@ -89,7 +89,7 @@
                         <div class="card-body">
                            <div class="h4 mt-0 title">About</div>
                            <p>
-                              Hi, I am a Computer Science student, currently pursuing my Bachelor's degree from College Of Engineering Roorkee. I like to implement the concepts which I learn, I personally feel that it helps me to grasp the concept better.  
+                              Hi, I am a Computer Science student, currently pursuing my Master's degree from IIIT Hyderabad. I like to implement the concepts which I learn, I personally feel that it helps me to grasp the concept better.  
                            </p>
                            My Resume Is Here!! &nbsp; 
                           <a  href="CV.pdf" target="_blank" title="ScoreCard"><i class="fa fa-file-pdf-o fa-2x youtube" aria-hidden="true"></i></a>
