--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
 
       .bb{
          color:black !important;
+         
 
       }
 
@@ -517,6 +518,29 @@
          <div class="section" id="education">
             <div class="container cc-education">
                <div class="h4 text-center mb-4 title">Education</div>
+               <div class="card">
+                  <div class="row">
+                     <div class="col-md-3 bg-info" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body cc-education-header bb">
+                           <p class="h5">2021-Present</p>
+                           <div class="h5">
+                              <br>Masters's Degree<br>
+                              <center>
+                              <center>
+                           </div>
+                        </div>
+                     </div>
+                     <div class="col-md-9" data-aos="fade-left" data-aos-offset="50" data-aos-duration="500">
+                        <div class="card-body">
+                           <div class="h5">IIIT Hyderabad</div>
+                           <p class="nn">M.Tech - Computer Science and Information Security</p>
+                           
+                           <div class="nn"><b>GPA :</b>NA</div>
+                           <p></p>
+                        </div>
+                     </div>
+                  </div>
+               </div>
                <div class="card">
                   <div class="row">
                      <div class="col-md-3 bg-info" data-aos="fade-right" data-aos-offset="50" data-aos-duration="500">
