--- a/index.html
+++ b/index.html
@@ -33,17 +33,12 @@
       <style>
 
       .nn{
-   color:gray !important;
+   color: #7C7C7C !important;
    font-family: "Book Antiqua";
    font-weight:normal;
    font-size: 16px;
       }
-      .nn{
-   color:gray !important;
-   font-family: "Book Antiqua";
-   font-weight:normal;
-   font-size: 16px;
-      }
+      
 
       .bb{
          color:black !important;
